# campfire

./: .gitignore  README.md
app/: CMakeLists.txt  Director.cpp  Director.h  GEEvent.cpp  GEEvent.h  GameEngine.cpp  GameEngine.h  Recycler.cpp  Recycler.h  Registry.cpp  Registry.h  SoundManager.cpp  SoundManager.h  SteamAdapter.cpp  SteamAdapter.h  app.pro  config.h  customtypes.h  main.cpp
app/effects/: AEffect.cpp  AEffect.h  NoiseEffect.cpp  NoiseEffect.h  PainEffect.cpp  PainEffect.h
app/helpers/: VisibilityTracer.cpp  VisibilityTracer.h  WindingNumber.cpp  WindingNumber.h
app/jsoncpp/: jsoncpp.cpp
app/jsoncpp/json/: json.h
app/res/sprites/: bob.json  bullet.json  crate.json  enemy.json  fence.json  girl.json  pistol.json
app/scenes/: AScene.cpp  AScene.h  LevelScene.cpp  LevelScene.h  MainMenuScene.cpp  MainMenuScene.h  SplashScene.cpp  SplashScene.h  TestLevelScene.cpp  TestLevelScene.h
app/types/: Animation.cpp  Animation.h
app/world/: Bob.cpp  Bob.h  Camera.cpp  Camera.h  Crate.cpp  Crate.h  Creature.cpp  Creature.h  Fence.cpp  Fence.h  GenericEnemy.cpp  GenericEnemy.h  Grid.cpp  Grid.h  Item.cpp  Item.h  Movable.cpp  Movable.h  Pistol.cpp  Pistol.h  Projectile.cpp  Projectile.h  Sprited.cpp  Sprited.h  WorldObject.cpp  WorldObject.h
art/: char.xcf  char2.xcf
